[package]
name = "ndarrays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
nalgebra = "0.32.1"
nshare = "0.9.0"

[[bin]]
name = "basics"
path = "src/basics.rs"

[[bin]]
name = "read-img"
path = "src/read-img.rs"
