[package]
name = "torch-ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.11.0"
anyhow = "*"

[[bin]]
name="basics"
path="src/basics.rs"

[[bin]]
name="custom_network"
path="src/custom_network.rs"